update edap version